--- a/src/Job.module.scss
+++ b/src/Job.module.scss
@@ -28,9 +28,15 @@
     }
 
     h1 {
-      font-size: 28px;
+      font-size: 32px;
       font-weight: bold;
       color: yellow;
+     
+    }
+    h3{
+      font-size: 28px;
+      font-weight: bold;
+      color: white;
     }
 
     .buttonGroup {
