--- a/src/AboutUs.module.scss
+++ b/src/AboutUs.module.scss
@@ -4,6 +4,7 @@
     text-align: center;
     padding: 50px 20px;
     font-family: "Arial", sans-serif;
+    margin-top: 5rem;
   
     .title {
       font-size: 2rem;
