--- a/src/Address.module.scss
+++ b/src/Address.module.scss
@@ -3,6 +3,7 @@
   justify-content: space-between;
   align-items: center;
   gap: 20px;
+ margin-top: 5rem;
 
   @media (max-width: 768px) {
     flex-direction: column-reverse;
