--- a/src/Home.module.scss
+++ b/src/Home.module.scss
@@ -97,7 +97,7 @@
     }
 
     h1 {
-      font-size: 2rem !important;
+      font-size: 1.5rem !important;
     }
 
     p {
@@ -109,6 +109,35 @@
     .workerImage {
       width: 250px !important;
       height: auto !important;
+    }
+  }
+
+  
+
+}
+
+@media (max-width: 600px) {
+  .buttons {
+    display: flex;
+    gap: 10px;
+    margin-top: 20px;
+    align-items: center;
+
+    .whatsappBtn {
+      display: flex;
+      align-items: center;
+      background: #4caf50;
+      color: white;
+      border: none;
+      padding: 8px 8px !important;
+      border-radius: 5px;
+      cursor: pointer;
+      font-size: 0.8rem !important;
+
+      img {
+        width: 18px;
+        margin-right: 6px;
+      }
     }
   }
 }
