--- a/src/SkilledProfessionals.module.scss
+++ b/src/SkilledProfessionals.module.scss
@@ -41,16 +41,23 @@
     align-items: center;
     gap: 10px;
     font-size: 16px;
-    font-weight: 600;
-    color: black;
+    font-weight: 500;
+    color: #333;
     margin-bottom: 5px;
+    text-align: left; 
 
     i {
       font-size: 18px;
       color: #4caf50;
     }
+
+    @media (max-width: 768px) {
+      justify-content: flex-start; 
+      gap: 5px; 
+    }
   }
 }
+
 
 .buttons {
   display: flex;
