--- a/src/WhoWeServe.module.scss
+++ b/src/WhoWeServe.module.scss
@@ -1,3 +1,8 @@
+.heading{
+  text-align: center;
+  margin-top: 2rem;
+}
+
 .container {
     display: flex;
     flex-direction: column;
@@ -13,7 +18,12 @@
       flex-direction: row;
       text-align: left;
     }
+
+    
+
   }
+
+  
   
   .imageContainer {
     flex-shrink: 0;
@@ -64,7 +74,14 @@
     gap: 10px;
     font-weight: bold;
     color: #333;
+    text-align: left; 
+  
+    @media (max-width: 768px) {
+      justify-content: flex-start; 
+      gap: 10px; 
+    }
   }
+  
   
   .icon {
     color: #4caf50;
