--- a/src/Home.module.scss
+++ b/src/Home.module.scss
@@ -7,6 +7,9 @@
   padding: 50px;
   background: url("./assets/Image.png") center/cover no-repeat;
   position: relative;
+  margin-top: 4rem;
+
+  
 
   &::before {
     content: "";
