--- a/src/Home.module.scss
+++ b/src/Home.module.scss
@@ -8,8 +8,7 @@
   background: url("./assets/Image.png") center/cover no-repeat;
   position: relative;
   margin-top: 4rem;
-
-  
+  overflow: hidden; 
 
   &::before {
     content: "";
@@ -22,11 +21,34 @@
     z-index: 1;
   }
 
+  img {
+    width: 100%;
+    height: auto;
+    object-fit: contain;
+    display: block;
+    position: relative;
+    z-index: 2;
+    animation: zoomIn 1.2s ease-in-out; 
+  }
+
+@keyframes zoomIn {
+  from {
+    transform: scale(0.8);
+    opacity: 0;
+  }
+  to {
+    transform: scale(1);
+    opacity: 1;
+  }
+}
+
+
   .leftSection {
     position: relative;
     z-index: 2;
     color: white;
     text-align: start;
+    animation: zoomIn 1.2s ease-in-out;
 
     h2 {
       font-size: 1.8rem;
