--- a/src/SkilledProfessionals.module.scss
+++ b/src/SkilledProfessionals.module.scss
@@ -44,7 +44,7 @@
     font-weight: 500;
     color: #333;
     margin-bottom: 5px;
-    text-align: left; 
+    text-align: left;
 
     i {
       font-size: 18px;
@@ -52,12 +52,11 @@
     }
 
     @media (max-width: 768px) {
-      justify-content: flex-start; 
-      gap: 5px; 
+      justify-content: flex-start;
+      gap: 5px;
     }
   }
 }
-
 
 .buttons {
   display: flex;
@@ -78,26 +77,32 @@
   padding: 12px 20px;
   font-size: 16px;
   font-weight: bold;
-  border-radius: 5px;
+  border-radius: 8px;
   text-decoration: none;
   transition: all 0.3s ease;
+  border: 2px solid #4caf50;
 }
 
 .callButton {
-  background: #4caf50;
+  background: #4caf50 !important;
   color: white;
-  border: 2px solid #4caf50;
+  border: 2px solid #4caf50 !important;
+  border-radius: 5px !important;
+
+
 
   &:hover {
-    background: white;
-    color: #4caf50;
+    background: white  !important;
+    color: #4caf50 !important;
   }
 }
 
 .whatsappButton {
   background: white;
   color: #4caf50;
-  border: 2px solid #4caf50;
+  border: 2px solid #4caf50 !important;
+  border-radius: 5px !important;
+
 
   &:hover {
     background: #4caf50;
