--- a/src/ContactUs/Address.module.scss
+++ b/src/ContactUs/Address.module.scss
@@ -3,9 +3,9 @@
   justify-content: space-between;
   align-items: center;
   gap: 20px;
- margin-top: 5rem;
+  margin-top: 5rem;
 
-  @media (max-width: 768px) {
+  @media (max-width: 575px) {
     flex-direction: column-reverse;
     align-items: center;
     text-align: center;
@@ -36,7 +36,7 @@
   .companyName {
     font-size: 1.8rem;
     font-weight: bold;
-    text-align: center;
+    text-align: start;
     margin-bottom: 20px;
   }
 
