--- a/src/Home/Company.module.scss
+++ b/src/Home/Company.module.scss
@@ -4,7 +4,7 @@
   align-items: center;
   background: #f5f3f2;
   padding: 10px 80px;
-  border-radius: 10px;
+  margin-top: 1rem;
   flex-wrap: wrap;
   text-align: center;
 
