--- a/src/Home/Home.module.scss
+++ b/src/Home/Home.module.scss
@@ -5,7 +5,7 @@
   align-items: center;
   height: 100vh;
   padding: 50px;
-  background: url("./assets/Image.png") center/cover no-repeat;
+  background: url("../assets/Image.png") center/cover no-repeat;
   position: relative;
   margin-top: 4rem;
   overflow: hidden; 
@@ -101,6 +101,7 @@
 
     h1 {
       font-size: 1.5rem !important;
+      justify-content: start;
     }
 
     p {
@@ -145,7 +146,7 @@
   text-decoration: none;
   transition: all 0.3s ease;
   border: 2px solid #4caf50;
-  padding: 12px 20px;
+  padding: 12px 20px !important;
 
   @media (max-width: 768px) {
     font-size: 14px; 
@@ -153,8 +154,8 @@
   }
 
   @media (max-width: 600px) {
-    font-size: 12px;
-    padding: 8px 12px; 
+    font-size: 12px !important;
+    padding: 8px 12px !important 
   }
 }
 
@@ -173,8 +174,12 @@
 .whatsappButton {
   background: transparent !important;
   color: #4caf50 !important;
-  padding: 9px 12px !important; 
+  padding: 16px 12px !important; 
   border: 1px solid #4caf50 !important; 
+  @media (max-width: 600px){
+    padding: 11px 12px !important; 
+
+  }
     
 
 
