--- a/src/Home/SkilledProfessionals.module.scss
+++ b/src/Home/SkilledProfessionals.module.scss
@@ -8,7 +8,7 @@
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 
-  @media (max-width: 768px) {
+  @media (max-width: 978px) {
     flex-direction: column;
     text-align: center;
   }
@@ -64,51 +64,69 @@
   margin-top: 20px;
 
   @media (max-width: 768px) {
-    flex-direction: column;
-    align-items: center;
+    gap: 10px; 
+  }
+
+  @media (max-width: 600px) {
+    gap: 5px; 
+  }
+
+  a {
+    text-decoration: none;
   }
 }
 
 .callButton,
 .whatsappButton {
-  display: flex;
-  align-items: center;
-  gap: 8px;
-  padding: 12px 20px;
-  font-size: 16px;
-  font-weight: bold;
-  border-radius: 8px;
-  text-decoration: none;
-  transition: all 0.3s ease;
-  border: 2px solid #4caf50;
+  display: flex !important;
+  align-items: center !important;
+  justify-content: center;
+  gap: 8px !important;
+  padding: 12px 20px !important;
+  font-size: 16px !important;
+  border-radius: 8px !important;
+  text-decoration: none !important;
+  transition: all 0.3s ease !important;
+  border: 2px solid #4caf50 !important;
+
+  @media (max-width: 768px) {
+    font-size: 14px !important;
+    padding: 10px 16px !important;
+  }
+
+  @media (max-width: 600px) {
+    font-size: 12px !important; 
+    padding: 6px 12px !important; 
+  }
+
+  @media (max-width: 480px) {
+    font-size: 9px !important; 
+    padding: 5px 10px !important; 
+  }
 }
 
 .callButton {
   background: #4caf50 !important;
-  color: white;
-  border: 2px solid #4caf50 !important;
+  color: white !important;
   border-radius: 5px !important;
 
-
-
   &:hover {
-    background: white  !important;
+    background: white !important;
     color: #4caf50 !important;
   }
 }
 
 .whatsappButton {
-  background: white;
-  color: #4caf50;
-  border: 2px solid #4caf50 !important;
+  background: white !important;
+  color: #4caf50 !important;
   border-radius: 5px !important;
 
-
   &:hover {
-    background: #4caf50;
-    color: white;
+    background: #4caf50 !important;
+    color: white !important;
   }
 }
+
 
 .imageContainer {
   flex: 1;
