--- a/src/Home/SkilledProfessionals.module.scss
+++ b/src/Home/SkilledProfessionals.module.scss
@@ -102,6 +102,7 @@
   @media (max-width: 480px) {
     font-size: 9px !important; 
     padding: 5px 10px !important; 
+    gap: 2px !important;
   }
 }
 
