--- a/src/Home/WhoWeServe.module.scss
+++ b/src/Home/WhoWeServe.module.scss
@@ -142,6 +142,12 @@
     @media (max-width: 480px) {
       font-size: 9px !important; 
       padding: 5px 10px !important; 
+      gap: 2px !important;
+    }
+
+    @media (max-width: 370px) {
+      font-size: 8px !important; 
+      padding: 5px 10px !important; 
     }
   }
   
