--- a/src/Jobseeker/Job.module.scss
+++ b/src/Jobseeker/Job.module.scss
@@ -82,6 +82,12 @@
        font-size: 10px !important;
        padding: 8px 10px !important;
       }
+
+      @media (max-width: 500px) {
+        gap: 2px !important;
+        
+       }
+
     }
     
     .callButton {
