--- a/src/Jobseeker/Offers.module.scss
+++ b/src/Jobseeker/Offers.module.scss
@@ -77,7 +77,7 @@
   font-weight: bold;
   line-height: 1.3;
   span {
-    color: #ffb400;
+    color: rgb(250, 199, 91);
   }
   @media (max-width: 768px) {
     font-size: 1.5rem; 
@@ -164,7 +164,22 @@
     gap: 10px;
     font-size: 1rem;
     font-weight: bold;
-    color: white;
+    color: rgb(250, 199, 91);
+
+    @media (max-width: 600px) {
+      font-size: .7rem;
+    }
+    @media (max-width: 500px) {
+      font-size: .55rem;
+    }
+    @media (max-width: 400px) {
+      font-size: .54rem;
+    }
+    @media (max-width: 374px) {
+      font-size: .5rem;
+    }
+
+
   }
   
   .offerIcon {
