--- a/src/Home/SkilledProfessionals.module.scss
+++ b/src/Home/SkilledProfessionals.module.scss
@@ -28,6 +28,7 @@
     font-size: 16px;
     color: #444;
     margin-top: 10px;
+    text-align: justify;
   }
 }
 
@@ -35,6 +36,7 @@
   margin: 15px 0;
   padding: 0;
   list-style: none;
+  
 
   li {
     display: flex;
@@ -44,7 +46,7 @@
     font-weight: 500;
     color: #333;
     margin-bottom: 5px;
-    text-align: left;
+    text-align: justify;
 
     i {
       font-size: 18px;
@@ -63,14 +65,7 @@
   gap: 15px;
   margin-top: 20px;
 
-  @media (max-width: 768px) {
-    gap: 10px; 
-  }
-
-  @media (max-width: 600px) {
-    gap: 5px; 
-  }
-
+ 
   a {
     text-decoration: none;
   }
