--- a/src/Home/WhoWeServe.module.scss
+++ b/src/Home/WhoWeServe.module.scss
@@ -60,6 +60,7 @@
   .description {
     color: #666;
     margin: 1rem 0;
+    text-align: justify;
   }
   
   .list {
@@ -103,13 +104,7 @@
     gap: 15px;
     margin-top: 20px;
   
-    @media (max-width: 768px) {
-      gap: 10px; 
-    }
-  
-    @media (max-width: 600px) {
-      gap: 5px; 
-    }
+    
   
     a {
       text-decoration: none;
