--- a/src/Jobseeker/Offers.module.scss
+++ b/src/Jobseeker/Offers.module.scss
@@ -11,6 +11,9 @@
   margin: auto;
   min-height: 500px;
   margin-top: 4rem;
+  @media (min-width: 799px){
+    margin-top: 6rem;
+  }
 
   &::before {
     content: "";
