--- a/src/AboutUs/AboutUs.module.scss
+++ b/src/AboutUs/AboutUs.module.scss
@@ -5,6 +5,10 @@
     padding: 50px 20px;
     font-family: "Arial", sans-serif;
     margin-top: 4rem;
+
+    @media (min-width: 799px){
+      margin-top: 6rem;
+    }
   
     .title {
       font-size: 2rem;
