--- a/src/ContactUs/Address.module.scss
+++ b/src/ContactUs/Address.module.scss
@@ -5,6 +5,10 @@
   gap: 20px;
   margin-top: 5rem;
 
+  @media (min-width: 799px){
+    margin-top: 7rem;
+  }
+
   @media (max-width: 575px) {
     flex-direction: column-reverse;
     align-items: center;
