--- a/src/Home/Home.module.scss
+++ b/src/Home/Home.module.scss
@@ -28,7 +28,7 @@
   .rightSection {
     flex: 1;
     max-width: 50%;
-    
+
     img {
       width: 100%;
       height: auto;
@@ -46,7 +46,9 @@
     flex: 1;
     max-width: 50%;
 
-    h2 { font-size: 1.8rem; }
+    h2 {
+      font-size: 1.8rem;
+    }
 
     h1 {
       font-size: 2.5rem;
@@ -62,15 +64,7 @@
       margin-top: 10px;
     }
   }
-
-  .buttons {
-    display: flex;
-    gap: 2rem;
-    margin-top: 2rem;
-  }
 }
-
-
 
 @media (max-width: 770px) {
   .homeContainer {
@@ -79,21 +73,20 @@
     text-align: center;
     gap: 5rem;
 
-    .leftSection, .rightSection {
+    .leftSection,
+    .rightSection {
       max-width: 100%;
     }
 
     .leftSection {
-      h1 { font-size: 1.8rem !important;
-      justify-content: center; }
-      h2 { font-size: 1.3rem !important;
-      justify-content: center; }
-    }
-
-    .buttons {
-      flex-direction: column;
-      gap: 1rem;
-      button { max-width: 100%; }
+      h1 {
+        font-size: 1.8rem !important;
+        justify-content: center;
+      }
+      h2 {
+        font-size: 1.3rem !important;
+        justify-content: center;
+      }
     }
   }
 }
@@ -101,13 +94,12 @@
 @media (max-width: 480px) {
   .homeContainer {
     .leftSection {
-      h1 { font-size: 1.5rem !important; }
-      p { font-size: 0.9rem !important; }
-    }
-    
-    .buttons button {
-      padding: 12px 15px;
-      font-size: 12px;
+      h1 {
+        font-size: 1.5rem !important;
+      }
+      p {
+        font-size: 0.9rem !important;
+      }
     }
   }
 }
