--- a/src/Header.module.scss
+++ b/src/Header.module.scss
@@ -56,18 +56,18 @@
 
     .contactButton {
       background: transparent;
-      color: #20c020;
-      border: 1px solid #4cb94c;
-      padding: 10px 20px;
+      color: #1CB260;
+      border: 1px solid #1CB260;
+      padding: 11px 20px;
       border-radius: 25px; 
       cursor: pointer;
       transition: all 0.3s ease-in-out;
-      font-size: 16px;
+      font-size: 15px;
     
       &:hover {
-        background: #2ba72b;
+        background: #1CB260;
         color: white;
-        border: 1px solid #08a208 !important; 
+        border: 1px solid #1CB260 !important; 
         
       }
     }
