--- a/src/Home/Home.module.scss
+++ b/src/Home/Home.module.scss
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&family=Fjalla+One&family=Liter&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Nunito:ital,wght@0,200..1000;1,200..1000&family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&family=Playfair+Display:ital,wght@0,400..900;1,400..900&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Prata&family=Raleway:ital,wght@0,100..900;1,100..900&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+
 .homeContainer {
   display: flex;
   justify-content: space-between;
@@ -47,11 +49,11 @@
     max-width: 50%;
 
     h2 {
-      font-size: 1.8rem;
+      font-size: 34px;
     }
 
     h1 {
-      font-size: 2.5rem;
+      font-size: 38px;
       justify-content: left;
       span {
         color: rgb(19, 125, 64);
@@ -60,8 +62,10 @@
     }
 
     p {
-      font-size: 1rem;
+      font-size: 22px;
       margin-top: 10px;
+      color: #F5F5F5BF;
+      font-family: "Be Vietnam Pro";
     }
   }
 }
